# rl-blox

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ci/: manifest.xml
.github/workflows/: test.yaml
agents/: dqn.py
benchmarks/: benchmark_replay_buffer.py
doc/source/: aim.rst  api.rst  conf.py  index.rst  memory.rst
examples/: a2c_continuous.py  a2c_discrete.py  a2c_example.py  a2c_serial_continuous.py  actor_critic_continuous.py  actor_critic_discrete.py  aim_example.py  amt_continuous_example.py  amt_discrete_example.py  amt_example.py  cmaes_example.py  convert_mrq_weights_to_pytorch.py  convert_td7_weights_to_pytorch.py  crossq_example.py  ddpg_example.py  ddqn_example.py  ddqn_per_example.py  double_q_learning_example.py  dqn_example.py  dueling_dqn_example.py  dynaq_example.py  frozen_lake_example.py  monte_carlo_example.py  mrq_example.py  mt_mrq_example.py  nature_dqn_example.py  per_example.py  pets_example.py  ppo_continuous_example.py  ppo_discrete_example.py  q_learning_example.py  q_learning_jax_example.py  reinforce_continuous.py  reinforce_discrete.py  reuse_replay_buffer.py  sac_example.py  sarsa_example.py  sarsa_jax_example.py  smt_continuous_example.py  smt_discrete_example.py  (+7 more)
examples/model/: compare_exp_log_var.py  cross_entropy_method.py  gaussian_mlp_ensemble.py  pendulum_reward.py  probabilistic_ensemble.py
examples/toy_text/: blackjack_example.py  cliffwalk_example.py  frozen_lake_example.py  taxi_example.py
modular_rl/algorithms/: base_algorithm.py  monte_carlo.py  q_learning.py
modular_rl/algorithms/mb/: monte_carlo.py
modular_rl/algorithms/model_based/: intorch.py  pets.py
modular_rl/algorithms/model_free/: actor_critic.py  ddpg.py  double_q_learning.py  dqn.py  monte_carlo.py  policy_gradient.py  q_learning.py  q_learning_jax.py  reinforce.py  sac.py  sarsa.py  sarsa_jax.py  spinup_jax.py
modular_rl/envs/: atari.py
modular_rl/helper/: experiment_helper.py
modular_rl/policy/: base_model.py  base_policy.py  base_policy_jax.py  differentiable.py  tabular_model.py  value_functions.py  value_functions_jax.py  value_policy.py
modular_rl/tools/: error_functions.py
rl_blox/: __init__.py
rl_blox/algorithm/: a2c.py  a2c_serial.py  active_mt.py  actor_critic.py  cmaes.py  ddpg.py  ddqn.py  double_q_learning.py  dqn.py  dueling_dqn.py  dynaq.py  monte_carlo.py  mrq.py  nature_dqn.py  per.py  pets.py  ppo.py  q_learning.py  reinforce.py  sac.py  sarsa.py  smt.py  td3.py  td3_lap.py  td7.py  uniform_task_sampling.py
rl_blox/blox/: base_policy.py  checkpointing.py  double_qnet.py  dueling_qnet.py  gae.py  losses.py  model_based_encoder.py  multitask.py  preprocessing.py  probabilistic_ensemble.py  replay_buffer.py  return_estimates.py  sampling.py  target_net.py  value_functions.py  value_policy.py
rl_blox/helper/: experiment_helper.py
rl_blox/logging/: checkpointer.py  logger.py  plot_stats.py  timer.py
rl_blox/model/: cross_entropy_method.py  gaussian_mlp_ensemble.py  probabilistic_ensemble.py
rl_blox/policy/: base_model.py  base_policy.py  differentiable.py  replay_buffer.py  value_functions.py  value_functions_jax.py  value_policy.py
rl_blox/tools/: gymtools.py
rl_blox/util/: experiment_helper.py  nnx.py  serialize.py  torch.py
tests/: conftest.py  test_a2c.py  test_actor_critic.py  test_cmaes.py  test_ddpg.py  test_ddqn.py  test_double_q_learning.py  test_dqn.py  test_dynaq.py  test_monte_carlo.py  test_mrq.py  test_nature_dqn.py  test_pets.py  test_ppo.py  test_preprocessing.py  test_q_learning.py  test_reinforce.py  test_replay_buffer.py  test_sac.py  test_sarsa.py  test_serialize.py  test_smt.py  test_tabular_model.py  test_tabular_value_functions.py  test_td3.py  test_td7.py  test_uts.py  test_value_functions.py
(+27 files in other folders)
